fixing image overflowing issue on mobile view

--- a/LearningBlog/styles.css
+++ b/LearningBlog/styles.css
@@ -20,9 +20,15 @@ body {
     margin-top: -30px;
 }
 .sunToSatContainer {
+    width: 100px;
     display: flex;
     flex-direction: row;
     padding: 5px;
+}
+.sunToSatContainer img {
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 .sunToSat {
     display: inline-flex;
